--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 	path = src/linux
 	url = https://github.com/gattaca-lab/linux
 	branch = riscv_tbi
+[submodule "src/buildroot"]
+	path = src/buildroot
+	url = git://git.busybox.net/buildroot
