--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "src/riscv-pk"]
 	path = src/riscv-pk
 	url = https://github.com/riscv/riscv-pk
+[submodule "src/riscv-gnu-toolchain"]
+	path = src/riscv-gnu-toolchain
+	url = https://github.com/riscv/riscv-gnu-toolchain
