--- a/.gitmodules
+++ b/.gitmodules
@@ -5,11 +5,11 @@
 [submodule "src/qemu"]
 	path = src/qemu
 	url = https://github.com/gattaca-lab/qemu
-	branch = riscv_tbi
+	branch = riscv_pm_qemu_5.1
 [submodule "src/linux"]
 	path = src/linux
 	url = https://github.com/gattaca-lab/linux
-	branch = riscv_tbi
+	branch = riscv_pm_5.8
 [submodule "src/buildroot"]
 	path = src/buildroot
 	url = git://git.busybox.net/buildroot
