--- a/src/config/buildroot.config
+++ b/src/config/buildroot.config
@@ -169,8 +169,8 @@ BR2_PACKAGE_PROVIDES_TOOLCHAIN_EXTERNAL="toolchain-external-custom"
 BR2_TOOLCHAIN_EXTERNAL_PREFIX="riscv64-unknown-linux-gnu"
 BR2_TOOLCHAIN_EXTERNAL_BOOTLIN_ARCH_SUPPORTS=y
 BR2_TOOLCHAIN_EXTERNAL_CUSTOM_PREFIX="riscv64-unknown-linux-gnu"
-# BR2_TOOLCHAIN_EXTERNAL_GCC_12 is not set
-BR2_TOOLCHAIN_EXTERNAL_GCC_11=y
+BR2_TOOLCHAIN_EXTERNAL_GCC_12=y
+# BR2_TOOLCHAIN_EXTERNAL_GCC_11 is not set
 # BR2_TOOLCHAIN_EXTERNAL_GCC_10 is not set
 # BR2_TOOLCHAIN_EXTERNAL_GCC_9 is not set
 # BR2_TOOLCHAIN_EXTERNAL_GCC_8 is not set
@@ -185,7 +185,7 @@ BR2_TOOLCHAIN_EXTERNAL_GCC_11=y
 # BR2_TOOLCHAIN_EXTERNAL_GCC_4_4 is not set
 # BR2_TOOLCHAIN_EXTERNAL_GCC_4_3 is not set
 # BR2_TOOLCHAIN_EXTERNAL_GCC_OLD is not set
-# BR2_TOOLCHAIN_EXTERNAL_HEADERS_5_17 is not set
+BR2_TOOLCHAIN_EXTERNAL_HEADERS_5_17=y
 # BR2_TOOLCHAIN_EXTERNAL_HEADERS_5_16 is not set
 # BR2_TOOLCHAIN_EXTERNAL_HEADERS_5_15 is not set
 # BR2_TOOLCHAIN_EXTERNAL_HEADERS_5_14 is not set
@@ -194,7 +194,7 @@ BR2_TOOLCHAIN_EXTERNAL_GCC_11=y
 # BR2_TOOLCHAIN_EXTERNAL_HEADERS_5_11 is not set
 # BR2_TOOLCHAIN_EXTERNAL_HEADERS_5_10 is not set
 # BR2_TOOLCHAIN_EXTERNAL_HEADERS_5_9 is not set
-BR2_TOOLCHAIN_EXTERNAL_HEADERS_5_8=y
+# BR2_TOOLCHAIN_EXTERNAL_HEADERS_5_8 is not set
 # BR2_TOOLCHAIN_EXTERNAL_HEADERS_5_7 is not set
 # BR2_TOOLCHAIN_EXTERNAL_HEADERS_5_6 is not set
 # BR2_TOOLCHAIN_EXTERNAL_HEADERS_5_5 is not set
@@ -335,7 +335,17 @@ BR2_TOOLCHAIN_HEADERS_AT_LEAST_5_5=y
 BR2_TOOLCHAIN_HEADERS_AT_LEAST_5_6=y
 BR2_TOOLCHAIN_HEADERS_AT_LEAST_5_7=y
 BR2_TOOLCHAIN_HEADERS_AT_LEAST_5_8=y
-BR2_TOOLCHAIN_HEADERS_AT_LEAST="5.8"
+BR2_TOOLCHAIN_HEADERS_AT_LEAST_5_9=y
+BR2_TOOLCHAIN_HEADERS_AT_LEAST_5_10=y
+BR2_TOOLCHAIN_HEADERS_AT_LEAST_5_11=y
+BR2_TOOLCHAIN_HEADERS_AT_LEAST_5_12=y
+BR2_TOOLCHAIN_HEADERS_AT_LEAST_5_13=y
+BR2_TOOLCHAIN_HEADERS_AT_LEAST_5_14=y
+BR2_TOOLCHAIN_HEADERS_AT_LEAST_5_15=y
+BR2_TOOLCHAIN_HEADERS_AT_LEAST_5_16=y
+BR2_TOOLCHAIN_HEADERS_AT_LEAST_5_17=y
+BR2_TOOLCHAIN_HEADERS_LATEST=y
+BR2_TOOLCHAIN_HEADERS_AT_LEAST="5.16"
 BR2_TOOLCHAIN_GCC_AT_LEAST_4_3=y
 BR2_TOOLCHAIN_GCC_AT_LEAST_4_4=y
 BR2_TOOLCHAIN_GCC_AT_LEAST_4_5=y
@@ -350,7 +360,8 @@ BR2_TOOLCHAIN_GCC_AT_LEAST_8=y
 BR2_TOOLCHAIN_GCC_AT_LEAST_9=y
 BR2_TOOLCHAIN_GCC_AT_LEAST_10=y
 BR2_TOOLCHAIN_GCC_AT_LEAST_11=y
-BR2_TOOLCHAIN_GCC_AT_LEAST="11"
+BR2_TOOLCHAIN_GCC_AT_LEAST_12=y
+BR2_TOOLCHAIN_GCC_AT_LEAST="12"
 BR2_TOOLCHAIN_HAS_MNAN_OPTION=y
 BR2_TOOLCHAIN_HAS_SYNC_1=y
 BR2_TOOLCHAIN_HAS_SYNC_2=y
@@ -2989,7 +3000,10 @@ BR2_PACKAGE_UTIL_LINUX_LIBUUID=y
 # BR2_PACKAGE_UTIL_LINUX_PG is not set
 # BR2_PACKAGE_UTIL_LINUX_PARTX is not set
 # BR2_PACKAGE_UTIL_LINUX_PIVOT_ROOT is not set
-# BR2_PACKAGE_UTIL_LINUX_RAW is not set
+
+#
+# raw needs a toolchain w/ headers < 5.14
+#
 # BR2_PACKAGE_UTIL_LINUX_RENAME is not set
 # BR2_PACKAGE_UTIL_LINUX_RFKILL is not set
 # BR2_PACKAGE_UTIL_LINUX_RUNUSER is not set
