--- a/src/config/buildroot.config
+++ b/src/config/buildroot.config
@@ -359,6 +359,7 @@ BR2_GLOBAL_PATCH_DIR=""
 # Advanced
 #
 # BR2_FORCE_HOST_BUILD is not set
+# BR2_DOWNLOAD_FORCE_CHECK_HASHES is not set
 
 #
 # Forcing all downloads to have a valid hash needs a global patch and hash directory
